# Character_Obe

./: CMakeLists.txt  LICENSE  README.md  build.bat  characterobe.ui  run.bat
.github/workflows/: cmake-multi-platform.yml
src/: ExportDialog.cpp  ExportDialog.h  FindDialog.cpp  FindDialog.h  MainWindow.cpp  MainWindow.h  main.cpp
